force-app/main/default/objects/LiveAgent_Chat_Notifications__c/LiveAgent_Chat_Notifications__c.object-meta.xml
<CustomObject>
    <label>LiveAgent Chat Notifications</label>
    <nameField>
        <displayFormat>LACN-{0000}</displayFormat>
        <label>LiveAgent Chat Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveAgent Chats Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>