force-app/main/default/objects/LiveAgent_Chat_Notifications__c/fields/Chat_Request_Message__c.field-meta.xml
<CustomField>
    <fullName>Chat_Request_Message__c</fullName>
    <label>Chat Request Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>