force-app/main/default/objects/LiveAgent_Chat_Notifications__c/fields/New_Message_Sound_Active__c.field-meta.xml
<CustomField>
    <fullName>New_Message_Sound_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Message Sound Active</label>
    <type>Checkbox</type>
</CustomField>